--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -1,27 +1,43 @@
 .home-container {
-    padding: 20px;
-    font-size: 26px;
-    border: 1px red solid;
+    padding: 10px;
+    font-size: 20px;
     text-align: center;
+    border: 1px solid red;
 }
 
 .home-card {
+    display: flex;
+    flex-direction: column-reverse;
     background-color: #FFF;
-    box-shadown: 0px 4px 20px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
-    border: 1px orange solid;
+    border: 1px solid orange;
 }
 
 .home-content-container {
+    padding: 10px 10px 60px 10px;
     border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .home-content-container h1 {
+    width: 260px;
     font-size: 1em;
+    color: #263238;
+    margin-bottom: 15px;
+}
+
+.home-content-container p {
+    width: 260px;
+    font-size: 0.6em;
+    color: #9E9E9E;
+    margin-bottom: 30px;
 }
 
 .home-image-container {
-    padding: 0 15px;
+    padding: 50px 15px;
     border: 1px solid purple;
 }
 
