--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -2,7 +2,6 @@
     padding: 10px;
     font-size: 20px;
     text-align: center;
-    border: 1px solid red;
 }
 
 .home-card {
@@ -11,12 +10,10 @@
     background-color: #FFF;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
-    border: 1px solid orange;
 }
 
 .home-content-container {
     padding: 10px 10px 60px 10px;
-    border: 1px solid blue;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,7 +35,7 @@
 
 .home-image-container {
     padding: 50px 15px;
-    border: 1px solid purple;
+
 }
 
 .home-image-container svg {
@@ -102,5 +99,39 @@
     .home-content-container p {
         margin-bottom: 47px;
         width: 700px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .home-card {
+        flex-direction: row;
+        justify-content: space-around;
+        padding: calc(((85vh - 480px) / 2) - 20px) 0;
+    }
+
+    .home-content-container {
+        height: 480px;
+        width: 700px;
+        padding: 20px;
+        align-items: flex-start;
+        text-align: left;
+        align-content: space-between;
+        flex-flow: wrap;
+    }
+
+    .home-image-container {
+        display: flex;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .home-image-container svg {
+        width: 100%;
+    }
+}
+
+@media (min-width: 1400px) {
+    .home-image-container svg {
+        width: 480px;
     }
 }
