--- a/frontweb/src/components/ProductDetails/styles.css
+++ b/frontweb/src/components/ProductDetails/styles.css
@@ -1,16 +1,13 @@
 .product-details-container {
-    border: 1px solid red;
     font-size: 24px;
     padding: 10px;
 }
 
 .product-details-card {
     padding: 10px;
-    border: 1px solid red;
 }
 
 .goback-container {
-    border: 1px solid red;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -32,9 +29,11 @@
 }
 
 .img-container {
-    border: 1px solid red;
-    text-align: center;
+    border: 1px solid #E1E1E1;
+    border-radius: 20px;
+    padding: 10px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .img-container img {
@@ -42,7 +41,6 @@
 }
 
 .name-price-container {
-    border: 1px solid red;
     margin-bottom: 20px;
 }
 
@@ -53,7 +51,9 @@
 }
 
 .description-container {
-    border: 1px solid red;
+    border: 1px solid #E1E1E1;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .description-container h2 {
@@ -67,4 +67,68 @@
     color: #9E9E9E;
     font-size: 0.6em;
     letter-spacing: -0.015em;
+}
+
+@media (min-width: 576px) {
+    .product-details-container {
+        font-size: 32px;
+        padding: 20px;
+    }
+
+    .product-details-card {
+        padding: 20px;
+    }
+}
+
+@media (min-width: 992px) {
+    .product-details-container {
+        padding: 40px;
+    }
+
+    .product-details-card {
+        padding: 40px;
+    }
+
+    .img-container img {
+        width: 50%;
+    }
+
+    .description-container {
+        padding: 40px;
+    }
+
+    .name-price-container {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 1200px) {
+    .img-container img {
+        height: 280px;
+        width: auto;
+    }
+
+    .name-price-container {
+        display: block;
+    }
+
+    .description-container {
+        min-height: 302px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .img-container img {
+        height: 480px;
+        width: auto;
+    }
+
+    .name-price-container {
+        display: block;
+    }
+
+    .description-container {
+        min-height: 502px;
+    }
 }
