--- a/frontweb/src/pages/Admin/Navbar/styles.css
+++ b/frontweb/src/pages/Admin/Navbar/styles.css
@@ -25,6 +25,10 @@ ul {
     letter-spacing: -0.015em;
 }
 
+.admin-nav-item:hover {
+    color: #263238;
+}
+
 .admin-nav-item.active {
     background-color: rgba(64, 123, 255, 0.3);
     color: #407BFF;
@@ -32,4 +36,33 @@ ul {
 
 .admin-nav-item p {
     margin-bottom: 0px;
+}
+
+@media (min-width: 768px) {
+    .admin-nav-item {
+        min-width: 220px;
+    }
+} 
+
+@media (min-width: 1200px) {
+    ul {
+        justify-content: unset;
+        flex-direction: column;
+    }
+
+    .admin-nav-container {
+        padding: 0px;
+        width: 300px;
+        height: calc(100vh - 70px);
+    }
+
+    .admin-nav-item {
+        border-radius: 0px;
+        font-size: 18px;
+        height: 80px;
+        background-color: #FFF;
+        border-bottom: 1px solid #E1E1E1;
+        justify-content: flex-start;
+        padding-left: 40px;
+    }
 }
